fixed disalignment between phone and email icon

--- a/css/styles.css
+++ b/css/styles.css
@@ -8891,6 +8891,7 @@ button.bg-dark:focus {
   .mb-lg-0,
 .my-lg-0 {
     margin-bottom: 0 !important;
+    margin-top: 12px;
   }
 
   .ml-lg-0,
